resolve conflict in projectApi.ts after stash apply